--- a/UIChatContactCellL.xib
+++ b/UIChatContactCellL.xib
@@ -8,45 +8,43 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="j3v-bh-FXI" customClass="ChatContactTableViewCellL" customModule="Botoo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="j3v-bh-FXI" customClass="ChatContactTableViewCellL" customModule="Botoo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j3v-bh-FXI" id="SyK-kX-v7h">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oed-9V-zT2">
-                        <rect key="frame" x="16" y="15" width="289" height="21"/>
+                        <rect key="frame" x="16" y="10" width="289" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_no_person" translatesAutoresizingMaskIntoConstraints="NO" id="tJO-EY-gQh">
-                        <rect key="frame" x="76" y="44" width="30" height="30"/>
+                        <rect key="frame" x="16" y="39" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="J3W-5k-VP1"/>
+                            <constraint firstAttribute="width" constant="30" id="GwC-sB-5qe"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mP8-AB-JHF">
-                        <rect key="frame" x="16" y="44" width="57" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="57" id="2aT-Ph-pwI"/>
-                        </constraints>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mP8-AB-JHF">
+                        <rect key="frame" x="46" y="39" width="259" height="30"/>
                         <color key="tintColor" red="0.84705882349999995" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="Contact"/>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="oed-9V-zT2" firstAttribute="leading" secondItem="SyK-kX-v7h" secondAttribute="leadingMargin" constant="8" id="4w7-Mc-gc7"/>
-                    <constraint firstItem="mP8-AB-JHF" firstAttribute="top" secondItem="tJO-EY-gQh" secondAttribute="top" id="7xK-Bk-rx3"/>
-                    <constraint firstItem="mP8-AB-JHF" firstAttribute="bottom" secondItem="tJO-EY-gQh" secondAttribute="bottom" id="Fxb-9w-489"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="mP8-AB-JHF" secondAttribute="bottom" constant="7" id="MPA-QF-gQV"/>
-                    <constraint firstItem="tJO-EY-gQh" firstAttribute="leading" secondItem="mP8-AB-JHF" secondAttribute="trailing" constant="3" id="ORD-J7-15N"/>
-                    <constraint firstItem="oed-9V-zT2" firstAttribute="centerX" secondItem="SyK-kX-v7h" secondAttribute="centerX" id="fQP-pd-lqq"/>
-                    <constraint firstItem="mP8-AB-JHF" firstAttribute="top" secondItem="oed-9V-zT2" secondAttribute="bottom" constant="8" symbolic="YES" id="fgh-pd-Bvt"/>
-                    <constraint firstItem="oed-9V-zT2" firstAttribute="leading" secondItem="mP8-AB-JHF" secondAttribute="leading" id="hwV-6I-GVF"/>
-                    <constraint firstItem="oed-9V-zT2" firstAttribute="top" secondItem="SyK-kX-v7h" secondAttribute="topMargin" constant="7" id="ukb-KW-VWb"/>
+                    <constraint firstItem="oed-9V-zT2" firstAttribute="leading" secondItem="tJO-EY-gQh" secondAttribute="leading" id="4S1-aK-ytY"/>
+                    <constraint firstItem="mP8-AB-JHF" firstAttribute="leading" secondItem="tJO-EY-gQh" secondAttribute="trailing" id="A4j-kj-xYo"/>
+                    <constraint firstItem="oed-9V-zT2" firstAttribute="trailing" secondItem="mP8-AB-JHF" secondAttribute="trailing" id="EFy-sF-OI5"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="tJO-EY-gQh" secondAttribute="bottom" constant="2" id="Hdy-Hv-fjH"/>
+                    <constraint firstItem="tJO-EY-gQh" firstAttribute="top" secondItem="oed-9V-zT2" secondAttribute="bottom" constant="8" symbolic="YES" id="Rgf-Ni-exF"/>
+                    <constraint firstItem="tJO-EY-gQh" firstAttribute="bottom" secondItem="mP8-AB-JHF" secondAttribute="bottom" id="UxI-nY-Q6q"/>
+                    <constraint firstItem="oed-9V-zT2" firstAttribute="centerX" secondItem="SyK-kX-v7h" secondAttribute="centerX" id="Wzq-gJ-TIf"/>
+                    <constraint firstItem="tJO-EY-gQh" firstAttribute="top" secondItem="mP8-AB-JHF" secondAttribute="top" id="kkM-5R-Ahp"/>
+                    <constraint firstItem="oed-9V-zT2" firstAttribute="top" secondItem="SyK-kX-v7h" secondAttribute="topMargin" constant="2" id="nfN-fA-BZ5"/>
+                    <constraint firstItem="oed-9V-zT2" firstAttribute="leading" secondItem="SyK-kX-v7h" secondAttribute="leadingMargin" constant="8" id="xD1-ev-A6o"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -54,7 +52,7 @@
                 <outlet property="contactButton" destination="mP8-AB-JHF" id="WVv-7K-hPD"/>
                 <outlet property="nameLabel" destination="oed-9V-zT2" id="ZJf-ZE-uMy"/>
             </connections>
-            <point key="canvasLocation" x="875" y="-242"/>
+            <point key="canvasLocation" x="898" y="-188"/>
         </tableViewCell>
     </objects>
     <resources>
