--- a/Botoo/UIChatTableViewCell.xib
+++ b/Botoo/UIChatTableViewCell.xib
@@ -12,23 +12,29 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="crL-9T-zMu" id="c7h-6i-NuS">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OsI-0B-QnW">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OsI-0B-QnW">
                         <rect key="frame" x="17" y="0.0" width="287" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9E-rF-BR6" customClass="BubbleLabel" customModule="Botoo" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9E-rF-BR6" customClass="BubbleLabel" customModule="Botoo" customModuleProvider="target">
                         <rect key="frame" x="17" y="29" width="46" height="31"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="46" id="yO5-c9-uwz"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQC-uu-sdk">
-                        <rect key="frame" x="81" y="38" width="223" height="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQC-uu-sdk">
+                        <rect key="frame" x="71" y="38" width="223" height="13"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="13" id="BsY-mp-Hpe"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -36,16 +42,16 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="OsI-0B-QnW" firstAttribute="top" secondItem="c7h-6i-NuS" secondAttribute="topMargin" constant="6" id="BLR-Mk-6Lp"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="OsI-0B-QnW" secondAttribute="trailing" constant="9" id="Dc4-1g-1V6"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="gQC-uu-sdk" secondAttribute="bottom" constant="16" id="K8J-qx-0Tn"/>
-                    <constraint firstItem="B9E-rF-BR6" firstAttribute="top" secondItem="OsI-0B-QnW" secondAttribute="bottom" constant="8" id="QDd-Vp-qCR"/>
-                    <constraint firstItem="OsI-0B-QnW" firstAttribute="leading" secondItem="c7h-6i-NuS" secondAttribute="leadingMargin" constant="8" id="Srq-LV-CNd"/>
-                    <constraint firstItem="gQC-uu-sdk" firstAttribute="leading" secondItem="B9E-rF-BR6" secondAttribute="trailing" constant="18" id="cuo-Bw-fiE"/>
-                    <constraint firstItem="gQC-uu-sdk" firstAttribute="top" secondItem="OsI-0B-QnW" secondAttribute="bottom" constant="17" id="fdx-cS-czG"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="B9E-rF-BR6" secondAttribute="bottom" constant="7" id="jKY-ZA-Eg5"/>
-                    <constraint firstItem="B9E-rF-BR6" firstAttribute="leading" secondItem="c7h-6i-NuS" secondAttribute="leadingMargin" constant="8" id="q8Q-x8-xaG"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="gQC-uu-sdk" secondAttribute="trailing" constant="9" id="xgu-vp-07y"/>
+                    <constraint firstItem="gQC-uu-sdk" firstAttribute="leading" secondItem="B9E-rF-BR6" secondAttribute="trailing" constant="8" symbolic="YES" id="Mj5-ia-m6Y"/>
+                    <constraint firstItem="OsI-0B-QnW" firstAttribute="centerX" secondItem="c7h-6i-NuS" secondAttribute="centerX" id="QkO-dD-khd"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="gQC-uu-sdk" secondAttribute="trailing" constant="18" id="UlK-Fa-9Lj"/>
+                    <constraint firstItem="OsI-0B-QnW" firstAttribute="leading" secondItem="c7h-6i-NuS" secondAttribute="leadingMargin" constant="9" id="W7p-DS-JHc"/>
+                    <constraint firstItem="OsI-0B-QnW" firstAttribute="top" secondItem="c7h-6i-NuS" secondAttribute="top" id="djT-Eg-He8"/>
+                    <constraint firstItem="B9E-rF-BR6" firstAttribute="top" secondItem="OsI-0B-QnW" secondAttribute="bottom" constant="8" symbolic="YES" id="hXb-SD-g4f"/>
+                    <constraint firstItem="OsI-0B-QnW" firstAttribute="leading" secondItem="B9E-rF-BR6" secondAttribute="leading" id="koh-Q6-8pP"/>
+                    <constraint firstItem="B9E-rF-BR6" firstAttribute="centerY" secondItem="gQC-uu-sdk" secondAttribute="centerY" id="pt6-aa-66O"/>
+                    <constraint firstItem="gQC-uu-sdk" firstAttribute="top" secondItem="OsI-0B-QnW" secondAttribute="bottom" constant="17" id="s0k-5E-BPH"/>
+                    <constraint firstItem="gQC-uu-sdk" firstAttribute="bottom" secondItem="c7h-6i-NuS" secondAttribute="bottomMargin" id="xHW-Ib-fQg"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
